--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ ref5.on("value", function (snapshot4) {
   $('#purpose').val(purpose);
   $('#transfer_when').val(application_date);
   $('#account_name').val(account_name);
-  $('#note').val(note);
+  $('#note').html(note);
 
   //  $('#per_installment').val(per_installment);
 
